Apply flex-wrap within groups as well as around groups, to stop long groups extending outside the editor container

--- a/src/less/theme/components/toolbar/toolbar-group.less
+++ b/src/less/theme/components/toolbar/toolbar-group.less
@@ -16,6 +16,7 @@
   border: @toolbar-group-border;
   border-radius: @toolbar-group-border-radius;
   display: flex;
+  flex-wrap: wrap;
   margin: 0 @toolbar-group-spacing-x 0 0;
   padding: 0 @toolbar-group-padding-x;
 }
